// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Given a Controller component when it is rendered and the component is in pause should match the snapshot 1`] = `
<styled.button
  onClick={[MockFunction]}
>
  <PlayIcon />
</styled.button>
`;

exports[`Given a Controller component when it is rendered should match the snapshot 1`] = `
<styled.button
  onClick={[MockFunction]}
>
  <PauseIcon />
</styled.button>
`;
